Fix Chambers formula part

--- a/report/2_optical_conductivity/3_chambers.tex
+++ b/report/2_optical_conductivity/3_chambers.tex
@@ -1,21 +1,16 @@
 \subsection{Boltzmann Transport and Chambers Formula for Optical Conductivity}
-The Boltzmann transport equation is a semi-classical model of flow. 
-In the context of band structure theory reminded earlier, 
-and considering that the pseudo-momentum defined above applies to $N\gg 1$ actual particles (hence 'semi-classical'), 
-it is closely related to the Gibbs-Liouville theorem in variational mechanics. 
-
-This point can convince us that this approach gives a more detailed model of the electronic properties of a material, 
+The Boltzmann transport equation is a semi-classical model of flow 
+which gives a more detailed model of the electronic properties of a material, 
 since it accounts for the trajectories of the electrons in phase space. 
-Chambers' formula thus contains a lot more information about the electronic structure
-of the material, 
-which can show more subtleties in its physical description.
+Chambers' formula thus describes the real electronic structure of the material, 
+and can thus account for anisotropic scattering processes.
 
-Using the equation, with a few reasonable assumptions, 
+Using the Boltzmann equation, with a few reasonable assumptions, 
 one can derive the Chambers formula for conductivity. 
 The formula is usually applied for DC conductivity ($\sigma(\omega=0)$), 
 but it can be generalized for optical conductivity too (see appendix \ref{sec:chambers}).
 This model has been used successfully in the past to study the behavior of cuprates 
-and make predictions about their physical properties\cite{grissonnanche2021}, 
+and make predictions about their physical properties\cite{grissonnanche2021, grissonnanche2024, fang2022, gourgout2022, ataei2022}, 
 justifying its use here.
 
 According to the Chambers formula for optical conductivity, 
