--- a/report/ref.bib
+++ b/report/ref.bib
@@ -117,6 +117,46 @@
   keywords = {Electronic properties and materials,Superconducting properties and materials},
 }
 
+@article{ataei2022,
+  title = {Electrons with {{Planckian}} Scattering Obey Standard Orbital Motion in a Magnetic Field},
+  author = {Ataei, Amirreza and Gourgout, A. and Grissonnanche, G. and Chen, L. and Baglo, J. and Boulanger, M.-E. and Lalibert{\'e}, F. and Badoux, S. and {Doiron-Leyraud}, N. and Oliviero, V. and Benhabib, S. and Vignolles, D. and Zhou, J.-S. and Ono, S. and Takagi, H. and Proust, C. and Taillefer, Louis},
+  year = {2022},
+  month = dec,
+  journal = {Nature Physics},
+  volume = {18},
+  number = {12},
+  pages = {1420--1424},
+  issn = {1745-2481},
+  doi = {10.1038/s41567-022-01763-0},
+}
+
+@article{gourgout2022,
+  title = {Seebeck {{Coefficient}} in a {{Cuprate Superconductor}}: {{Particle-Hole Asymmetry}} in the {{Strange Metal Phase}} and {{Fermi Surface Transformation}} in the {{Pseudogap Phase}}},
+  author = {Gourgout, A. and Grissonnanche, G. and Lalibert{\'e}, F. and Ataei, A. and Chen, L. and Verret, S. and Zhou, J.-S. and Mravlje, J. and Georges, A. and {Doiron-Leyraud}, N. and Taillefer, Louis},
+  year = {2022},
+  month = feb,
+  journal = {Physical Review X},
+  volume = {12},
+  number = {1},
+  pages = {011037},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.12.011037}
+}
+
+@article{grissonnanche2024,
+  title = {Electronic {{Band Structure}} of a {{Superconducting Nickelate Probed}} by the {{Seebeck Coefficient}} in the {{Disordered Limit}}},
+  author = {Grissonnanche, G. and Pan, G. A. and LaBollita, H. and Segedin, D. Ferenc and Song, Q. and Paik, H. and Brooks, C. M. and {Beauchesne-Blanchet}, E. and Santana Gonz{\'a}lez, J. L. and Botana, A. S. and Mundy, J. A. and Ramshaw, B. J.},
+  year = {2024},
+  month = oct,
+  journal = {Physical Review X},
+  volume = {14},
+  number = {4},
+  pages = {041021},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.14.041021}
+}
+
+
 @article{horio2018,
   title = {Three-Dimensional Fermi Surface of Overdoped La-Based Cuprates},
   author = {Horio, M. and Hauser, K. and Sassa, Y. and Mingazheva, Z. and Sutter, D. and Kramer, K. and Cook, A. and Nocerino, E. and Forslund, O. K. and Tjernberg, O. and Kobayashi, M. and Chikina, A. and Schr\"oter, N. B. M. and Krieger, J. A. and Schmitt, T. and Strocov, V. N. and Pyon, S. and Takayama, T. and Takagi, H. and Lipscombe, O. J. and Hayden, S. M. and Ishikado, M. and Eisaki, H. and Neupert, T. and M\aa{}nsson, M. and Matt, C. E. and Chang, J.},
