--- a/report/2_optical_conductivity/3_chambers.tex
+++ b/report/2_optical_conductivity/3_chambers.tex
@@ -82,5 +82,8 @@ tetragonal crystal structure of LSCO, given by
 where $\mu$ is the chemical potential, $t$, $t'$, and $t''$ are the first, second, and third
 nearest-neighbor hopping parameters, $t_z$ is the interlayer hopping parameter,
 $a=3.75\angstrom$ is the in-plane lattice constant, and $c/2=6.6\angstrom$ is the
-$\mathrm{CuO_2}$ layer spacing. These parameters are tabulated and, for the considered samples,
-can be fitted to experimental methods with good accuracy. 
+$\mathrm{CuO_2}$ layer spacing. These parameters are derived experimentally from ARPES measurements\cite{horio2018}. \\
+
+With this new formalism, we can now set out to use the Chambers formula to analyze the optical conductivity data produced by Legros et al.\cite{legros2022} to extract $m_c \approx m^*$.
+
+Our goal is to see if our new $m_c$ still contradicts the effective mass obtained from specific heat. 
