put a bit of a more positive spin on the conclusion

--- a/report/3_results/5_discussion.tex
+++ b/report/3_results/5_discussion.tex
@@ -3,7 +3,8 @@
 Throughout this project, we adapted cutting-edge techniques for the study of cuprates to analyze
 new optical conductivity data and did a thorough comparison with the older, more basic techniques.
 However, due to the lack of data and the low quality of the existing data, we are unable to draw
-strong conclusions yet.
+strong conclusions yet. With more time, we could use other techniques to try to better constrain
+the parameters and make better-guided fits to the data.
 
 The optical conductivity data from Legros et al. covers a very small range of frequencies, which
 makes it difficult to extract the more intricate details of the shape of the data. The big errors
