--- a/report/1_introduction/1_lsi.tex
+++ b/report/1_introduction/1_lsi.tex
@@ -9,6 +9,6 @@ Their laboratory consists of two refrigerators that can go from room temperature
 These refrigerators are equipped with a large superconducting magnet, 
 each capable of operating at up to 14 teslas.
 
-As our project was numerical on a day-to-day basis (leveraging published experimental data), 
+As our project was numerical (leveraging published experimental data),  
 we didn't carry out experiments using this equipment and were supervised by Prof. Grissonnanche only. 
 
