--- a/report/1_introduction/2_hightc.tex
+++ b/report/1_introduction/2_hightc.tex
@@ -20,8 +20,8 @@
 \end{figure}
 
 Cuprates are a class of superconductors with high critical temperature that have been subject
-to intense research since their discovery in 1986. They exhibit rich physical behavior, specially
-in their various phases.
+to intense research since their discovery in 1986 because the origin of their superconductivity is not well understood. They have a general formula $XYCu_mO_n$ (where $X$ and $Y$ can be a variety of elements) and exhibit rich physical behavior, 
+with a diverse phase diagram.
 
 The crystal structure of cuprates is a perovskite structure, with a copper-oxygen plane
 ($\mathrm{CuO}_2$) as the main conducting layer. This structure is shown in Figure
@@ -30,8 +30,12 @@ so the electronic properties of cuprates are mainly 2D. However, the interlayer 
 non-negligible, and the 3D nature of cuprates is important for their physical properties.
 
 The phase diagram of cuprates is shown in Figure \ref{fig:phase_diagram}. The main phases of
-cuprates are the Antiferromagnetic (AF) phase, the metallic phase, the Pseudogap (PG) phase,
-the Superconducting (SC) phase. The metallic phase itself can be split into a strange metal
-phase (with anamolous electronic scattering properties) and a normal metal phase (with
-well-described conductivity, using Fermi liquid theory). There is also a hypothesised point in the
-phase diagram called the quantum critical point, marked as $p^*$ in the figure.
+cuprates are the antiferromagnetic (AF) phase, the metallic phase, the pseudogap (PG) phase,
+the superconducting (SC) phase. 
+The metallic phase itself can be split into a strange metal phase 
+(with anomalous electronic scattering properties) and a normal metal phase 
+(with well-described conductivity, using Fermi liquid theory).
+The pseudogap phase is one of the most intriguing phases in the phase diagram, 
+with many peculiarities (such as no real phase transition with the metallic phase), 
+the details of which are beyond the scope of our project.
+There is also a hypothesised point in the phase diagram called the quantum critical point, marked as $p^*$ in the figure.
