--- a/report/1_introduction/2_hightc.tex
+++ b/report/1_introduction/2_hightc.tex
@@ -13,7 +13,7 @@
         \caption{Phase diagram of cuprates}
         \label{fig:phase_diagram}
     \end{subfigure}
-    \caption{Physical description of cuprates. (a) shows the provskite structure of a cuprate,
+    \caption{Physical description of cuprates. (a) shows the perovskite structure of a cuprate,
     and (b) shows the different phases of cuprates in a phase diagram. $p^*$ marks the hypothesised
     quantum critical point. AF, PG, and SC stand for Antiferromagnetic, Pseudogap, and
     Superconducting phases respectively.}
