--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -22,26 +22,25 @@
 \subsection{Evidence against the QCP: Optical Conductivity}
 In their 2022 paper, Legros et al.\cite{legros2022} instead used optical conductivity to
 probe the QCP. To do so, they first measured the optical conductivity of LSCO cuprates\footnote{
-LSCO is a cuprate with the formula La$_{2-x}$Sr$_x$CuO$_4$, where $x$ indicates the doping level.}
-in various fields. Then, they fitted a model called the Drude formula to the data, which is a naïve
-model for conductivity. The Drude formula is a simple classical model that has been used for a long
-time in condensed matter physics to model conductivity. With this, they extracted the cyclotron mass
-$m_c$ from the parameters of the fit.
+LSCO is a cuprate with the formula La$_{2-x}$Sr$_x$CuO$_4$, where $x$ indicates the doping level.} in various fields. 
+Then, they fitted a model the data. 
+The Drude formula which they used, is a simple classical model that has been used for a long time in condensed matter physics to model conductivity. 
+With this, they extracted the cyclotron mass $m_c$ from the parameters of the fit.
 
 They argued the cyclotron mass is the same as the effective mass of the charge carriers
-($m_c \sim m^*$), which can be a good or bad approximation.
+($m_c \sim m^*$), which is not rigorously true and can be a good or bad approximation depending on the case.
 
-At the end of all the analysis, Legros et al. found that the cyclotron mass does not peak
+At the end of all the analysis, Legros et al.\cite{legros2022} found that the cyclotron mass does not peak
 at the critical doping level and simply increases with doping (Figure \ref{fig:legros}). This is in contradiction with the
 results of Michon et al. and suggests that there is no QCP in cuprates.
 
-We believe, however, that their data analysis is problematic, because of the use of the Drude
-formula. Even though the Drude formula is derived using classical physics, it is highly effective for
+We believe, however, that their data analysis is problematic, because of their choice of model. 
+The Drude formula, derived using classical physics, is highly effective for
 analysing the conductivity of materials, which emerges from the collective quantum behavior of the
-electrons. But, this is only the case when the material has roughly isotropic electronic properties.
-\footnote{more precisely, the Fermi surface needs to be approximately isotropic} This is not true
-for cuprates, which have highly anisotropic electronic properties.\footnote{See Figure
+electrons\footnote{more precisely, the Fermi surface needs to be approximately isotropic}. 
+But, this is not true for cuprates, 
+which have highly anisotropic electronic properties.\footnote{See Figure
 \ref{fig:fermi_surface}. The Fermi surface is not anisotropic at all, and there is no reasonable
-approximation for interpreting it in a roughly isotropic way.} Also, the effective mass of the
-charge carriers is not necessarily the same as the cyclotron mass, but we only focus on the former
-issue in this project.
+approximation for interpreting it in a roughly isotropic way.} 
+One can also question the validity of the approximation that $m_c \sim m^*$, 
+however this was not a focus of our project.
