Last typos intro

--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -12,7 +12,7 @@
         \caption{Legros et al.\cite{legros2022}}
         \label{fig:legros}
     \end{subfigure}
-    \caption{Comparison of the measurements of Michon et al. Legros et al. In (a), measurements
+    \caption{Comparison of the measurements of Michon et al.\cite{michon2019} and Legros et al.\cite{legros2022} In (a), measurements
     of Michon et al. showing a peak in $C/T$ which signifies the existence of a QCP. In (b),
     measurements of Legros et al. drawn onto the measurements from Michon et al.,
     showing no peak in the cyclotron mass.}
