--- a/report/1_introduction/5_boltzmann.tex
+++ b/report/1_introduction/5_boltzmann.tex
@@ -1,13 +1,13 @@
 \subsection{How to resolve the contradiction?}
 In light of these contradicting conclusions, our project seeks to investigate a possible solution.
-On the one hand, Michon et al. probe criticality directly: 
+On the one hand, Michon et al.\cite{michon2019} probe criticality directly: 
 that is, they look for a thermodynamic phase transition using a heat capacity measurement.
 
-On the other hand, Legros et al. probe it indirectly using a measurement of optical conductivity: 
+On the other hand, Legros et al.\cite{legros2022} probe it indirectly using a measurement of optical conductivity: 
 $m_c$ is a parameter resulting from a fit of the experimental data. 
 Thus, any results are dependent on the theoretical model chosen to fit the data.
 
-An alternative to the Drude model used by Legros et al. is the Chambers formula, 
+An alternative to the Drude model used by Legros et al.\cite{legros2022} is the Chambers formula, 
 derived from Boltzmann transport theory.  While the Drude model is derived for a
 free electron (meaning it has isotropic transport properties), 
 Boltzmann transport takes into account such anisotropy and more of the microscopic details of the
