--- a/report/1_introduction/6_goals.tex
+++ b/report/1_introduction/6_goals.tex
@@ -6,7 +6,7 @@ During our project, we gradually set and met the following goals. In particular,
 	\item[\done] develop a tool to calculate a better model (Chambers' formula) by adapting existing code used for other experiments;
 	\item[\done] analytically compare the two models (Drude and Chambers') and show that the latter reduces to the former under a 'free electron' hypothesis;
 	\item[\done] validate the new numerical method by comparing calculated numerical results in the 'free electron' hypothesis with the Drude model;
-	\item[\done] develop a fitting tool leveraging the new code, existing packages;
+	\item[\done] develop a fitting tool leveraging the new code and existing packages;
 	\item[\done] qualitatively analyze (explore) the parameter space to prepare fitting;
 	\item[\done] perform the fits and find the best fitting protocol on one data from one doping level.
 	\item[\done] repeat the fitting on data from other doping levels.
