Part II - typos and wording

--- a/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
+++ b/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
@@ -4,7 +4,7 @@ The physical quantity of interest in this experiment is optical conductivity,
 the principle of which we will briefly explain.
 
 Conductivity is often measured in static conditions: 
-that is, for a constant or slowly varying applied electric fields. 
+that is, for a constant or slowly varying applied electric field. 
 However, as for many physical systems, 
 the dynamic response of the system is different from the static one. 
 
@@ -15,11 +15,9 @@ Here, because we are talking about periodic excitations, this complex conductivi
 
 \sloppy{Optical conductivity $\sigma(\omega)$ is a powerful probe into the electronic properties of the
 examined material,  giving a better insight than DC conductivity $\sigma(\omega=0)$ alone. 
-Moreover, as is done in Legros et al., 
-it is possible to apply an external magnetic field to the sample. 
-This yields interesting behaviours such as Angle Dependent Magnetoresistance (ADMR) 
-or the results of the experiment at hand.}
-
+Moreover, as is done in Legros et al.\cite{legros2022}, 
+it is possible to apply an external magnetic field to the sample to measure 
+$\omega_c = \frac{eB}{m_c}$.
 % Touch on the experimental setup
 There are several experimental setups used to measure optical conductivity. 
 While in principle, we can probe any frequency domain, 
@@ -33,4 +31,7 @@ The full experimental setup is not without challenges but is not directly releva
 However, we can note that since the electronic properties of cuprates are mainly 2D 
 (owing to their peroskite structure, as explained above), 
 the use of thin films is not unreasonable 
-and doesn't affect the relevance of the results for bulk materials.
+and doesn't affect the relevance of the results for bulk materials. 
+
+This experiment, at such high fields, is the first of its kind : 
+Peter Armitage's group has had to develop a new experimental setup using pulsed magnetic fields to carry it out.
