--- a/report/2_optical_conductivity/2_drude_modelling.tex
+++ b/report/2_optical_conductivity/2_drude_modelling.tex
@@ -1,24 +1,24 @@
 \subsection{What are the hypotheses of the Drude model?}
-As was stated previously, Legros et al. used the Drude model to analyze their data. 
+As was stated previously, Legros et al.\cite{legros2022} used the Drude model to analyze their data. 
 This phenomenological model is common and of great use, but it assumes that we study 'free electrons' that only periodically get scattered with a scattering rate $\Gamma$, 
 which is strictly speaking false for electrons in solids, 
 where they interact with a periodic lattice.
 
 We can translate this hypothesis in the language of condensed matter physics and band structure theory (which will simplify the comparison with Chambers' formula later). 
 For a single electron, due to the periodicity of the lattice, 
-we can define a quasi-momentum $\vb{k}$ which is a good quantum number and defines states with given energies. 
+we can define a wavevector $\vb{k}$ which is a good quantum number and defines states with given energies. 
 The filling of these levels according to Pauli's principle, by ascending energy, 
 allows us to define a Fermi energy and corresponding Fermi surface 
 which mostly determines the conduction properties of the material and can be, 
 in many cases, determined experimentally and modelled theoretically.
 
-What makes the Drude model useful is that in many cases, 
+What makes the Drude model so useful and used is that in many cases, 
 this Fermi surface can be approximated by a sphere, which yields the dispersion relation
 $E(\vb{k}) = \frac{\hbar\vec{k}}{2m^*}$  that is formally equivalent to that of a free electron
 (where $m^*$ is not necessarily $m_e$). The Drude model assumes a unique scattering rate
 independent of $\vb{k}$.
 
-In the end, Legros et al.\cite{legros2022} and others\cite{post2021} use the two-component Drude model with normal and superconducting carriers (in the presence of a magnetic field). 
+In the end, Legros et al.\cite{legros2022} and others\cite{post2021} use the two-component Drude model with normal and superconducting carriers in the presence of a magnetic field, (see appendix \ref{sec:chambers} for the full derivation).
 In this model, the complex optical conductivity in the left/right circular polarization basis is given by
 \begin{equation}
     \sigma_{ll/rr}(\omega) = i\epsilon_0\qty(
@@ -36,7 +36,7 @@ permittivity, and the adjustable parameters are
 \end{itemize}
 Left handed circular polarization is given by a negative $\omega$ and right handed by a positive $\omega$.
 
-As stated in Legros et al. and other sources, 
+As stated in Legros et al.\cite{legros2022} and other sources, 
 the high-frequency dielectric constant ($\epsilon_\infty$) does not greatly improve the quality of the fit and its results, so it is set to 1.
 Additionally, we can see here that in this model, the superconducting carriers only contribute to the imaginary part of $\sigma$. 
 This ended up being relevant to inform our fitting choices in the end.
@@ -50,4 +50,4 @@ relation between the two parameters is given by
 where $e$ is the elementary charge. This is the same approach used by Legros et al.\cite{legros2022}.
 
 As mentioned before, this model breaks down for materials with highly anisotropic electronic properties
-(i.e. highly anisotropic Fermi surfaces).
+(i.e. highly anisotropic Fermi surfaces), as is the case for cuprates.
