--- a/report/2bis_code_and_tools/1_plot_digitization.tex
+++ b/report/2bis_code_and_tools/1_plot_digitization.tex
@@ -1,5 +1,5 @@
 \subsection{Plot digitization}
-Once we understood well the disadvantages the Drude model had, 
+Once we understood well the disadvantages of the Drude model, 
 and the potential benefits of using Chambers' formula instead, 
 we needed to get access to the experimental data in order to 
 first reproduce the literature's Drude modelling and 
