--- a/report/2bis_code_and_tools/2_from_ADMR_to_optical_conductivity.tex
+++ b/report/2bis_code_and_tools/2_from_ADMR_to_optical_conductivity.tex
@@ -1,4 +1,4 @@
-\subsection{From ADMR to optical conductivity}
+\subsection{From DC to optical conductivity}
 % Our need to adapt it
 With our model chosen and the experimental data acquired, 
 we next needed to implement Chambers' formula to be able to fit the data and extract relevant parameters. 
@@ -6,7 +6,7 @@ To do that, we were able to leverage existing code and packages without reinvent
 
 % Context : There was already an existing code implementing Boltzmann transport calculations
 Indeed, when studying cuprate high temperature superconductors, 
-Prof. Grissonnanche's group extensively uses a code he developed during his earlier work on Angle Dependent Magnetoresistance (ADMR) experiments. 
+Prof. Grissonnanche's group extensively uses a code he developed during his earlier work on Angle Dependent Magnetoresistance (ADMR) experiments\cite{grissonnanche2021}. 
 This code is essentially implementing Chambers' formula in the DC case and is designed to vary the angle of the external field. 
 Therefore, we could build upon this very mature codebase to extend it to any value of $\omega$ by modifying the right functions.
 
