--- a/report/3_results/1_drude_vs_chambers.tex
+++ b/report/3_results/1_drude_vs_chambers.tex
@@ -15,8 +15,7 @@ both models are analytically fully equivalent (see appendix \ref{sec:equivalence
 To make sure our numerical implementation of the new model makes sense, 
 we can use this result as a form of validation of our code, on a known case. 
 We compared the output of our implementation of Chambers' model in the case of free electrons to the Drude model. 
-Figure \ref{fig:free_electrons} shows how the numerical model and the Drude explicit formula agree in this case,
-\textcolor{red}{for various values of the field B}.
+Figure \ref{fig:free_electrons} shows how the numerical model and the Drude explicit formula agree in this case.
 
 This successful validation test gave us confidence in the soundness of our implementation for further use, 
 however this test is not foolproof and we also double-checked the code itself.
