--- a/report/3_results/2bis_qualitative_understanding.tex
+++ b/report/3_results/2bis_qualitative_understanding.tex
@@ -65,7 +65,7 @@ As we increase the field, we see the conductivity peak splitting into one peak g
 $\omega$, and another into positive $\omega$. This is due to the different effect of the magnetic
 field on the two different types of charge carriers in the material: negative (electron-like)
 and positive (hole-like) particles.\footnote{The Fermi surface of LSCO has electron-like
-and hole-like regions} A model with no anisotropic scattering would have two conductivity peaks,
+and hole-like regions, defined by its curvature. This change in curvature flips a sign in the quadratic approximation of the dispersion relation used in the equations. See figure \ref{fig:fermi_surface}} A model with no anisotropic scattering would have two conductivity peaks,
 one for each type of charge carrier. The anisotropic scattering would kill one of the peaks,
 because it affects electron-like particles more severely. This is because of the different
 electronic properties of the material for electron-like and hole-like particles.\footnote{
