--- a/report/report.tex
+++ b/report/report.tex
@@ -42,6 +42,7 @@ siunitx,subcaption,upgreek,xcolor}
 
 \newpage
 \section{Codes and tools developed}
+In the following, all conductivities are expressed in $mS.cm^{-1}$
 \input{2bis_code_and_tools/1_plot_digitization}
 \input{2bis_code_and_tools/2_from_ADMR_to_optical_conductivity}
 
