--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -36,7 +36,7 @@ results of Michon et al. and suggests that there is no QCP in cuprates.
 
 We believe, however, that their data analysis is problematic, because of their choice of model. 
 The Drude formula, derived using classical physics, is highly effective for
-analysing the conductivity of materials, which emerges from the collective quantum behavior of the
+analyzing the conductivity of materials, which emerges from the collective quantum behavior of the
 electrons\footnote{more precisely, the Fermi surface needs to be approximately isotropic}. 
 But, this is not true for cuprates, 
 which have highly anisotropic electronic properties.\footnote{See Figure
