--- a/report/2_optical_conductivity/2_drude_modelling.tex
+++ b/report/2_optical_conductivity/2_drude_modelling.tex
@@ -14,7 +14,7 @@ in many cases, determined experimentally and modelled theoretically.
 
 What makes the Drude model so useful and used is that in many cases, 
 this Fermi surface can be approximated by a sphere, which yields the dispersion relation
-$E(\vb{k}) = \frac{\hbar\vec{k}}{2m^*}$  that is formally equivalent to that of a free electron
+$E(\vb{k}) = \frac{\hbar\vb{k}}{2m^*}$  that is formally equivalent to that of a free electron
 (where $m^*$ is not necessarily $m_e$). The Drude model assumes a unique scattering rate
 independent of $\vb{k}$.
 
